force-app/main/default/objects/Interface_Authentication_Info__mdt/Interface_Authentication_Info__mdt.object-meta.xml
<CustomObject>
    <description>API 관리 데이터</description>
    <label>Interface Authentication Info</label>
    <pluralLabel>Interface Authentication Info</pluralLabel>
</CustomObject>