force-app/main/default/objects/Interface_Authentication_Info__mdt/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>API 클라이언트 키 관리</description>
    <label>ClientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>