force-app/main/default/objects/Interface_Authentication_Info__mdt/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <description>API 엔드 포인트 관리</description>
    <label>EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>