force-app/main/default/objects/Interface_Authentication_Info__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>API 활성화 관리</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>