force-app/main/default/objects/Interface_Authentication_Info__mdt/fields/SecretKey__c.field-meta.xml
<CustomField>
    <fullName>SecretKey__c</fullName>
    <description>API 시크릿키 관리</description>
    <label>SecretKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>