force-app/main/default/objects/Interface_Authentication_Info__mdt/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>API 출처 관리</description>
    <label>System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>